Bug 98150 - DRM/IMX Kernel 4.8.0 oops when attach a FB with DRM_FORMAT_YUV420
Summary: DRM/IMX Kernel 4.8.0 oops when attach a FB with DRM_FORMAT_YUV420
Status: RESOLVED FIXED
Alias: None
Product: DRI
Classification: Unclassified
Component: DRM/other (show other bugs)
Version: XOrg git
Hardware: ARM Linux (All)
: medium blocker
Assignee: Default DRI bug account
QA Contact:
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2016-10-07 15:30 UTC by Jens Ziller
Modified: 2016-11-07 09:45 UTC (History)
0 users

See Also:
i915 platform:
i915 features:


Attachments
dmesg oops (5.45 KB, text/plain)
2016-10-07 15:30 UTC, Jens Ziller
no flags Details

Description Jens Ziller 2016-10-07 15:30:39 UTC
Created attachment 127103 [details]
dmesg oops

The DRM/IMX in Kernel 4.8.0 oops when attach a FB with DRM_FORMAT_YUV420. With a FB with ARGB it works. The relevant lines from dmesg are attached.
Comment 1 gnuiyl 2016-11-07 09:45:14 UTC
Should be fixed in v4.9-rc4 via commit e73aca5184ad9fc948ba22b4d35dce11db35bb25.
.


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.